themes/fab/style.css
/*
 * Style for FAB theme
 *
 * webtrees: Web based Family History software
 * Copyright (C) 2011 webtrees development team.
 *
 * Derived from PhpGedView
 * Copyright (C) 2002 to 2010  PGV Development Team.  All rights reserved.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 *
 * $Id$
 */

/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
html {overflow-y:scroll;}

.submenu {
	background-color:#EEE;
	border:thin solid #AAA;
}

/* Thin grey borders around block-level elements */
input,
textarea,
fieldset,
.border1,
.block,
.descriptionbox,
.facts_label, .facts_label02, .facts_label03, .facts_value,
.lifespan_outer,
.list_label, .list_label_wrap, .list_value, .list_value_wrap,
.messagebox,
.optionbox,
.person_box, .person_boxF, .person_boxNN,
.person0, .person1, .person2, .person3, .person4, .person5
.subbar,
#indi_main_blocks, #tabs,
.topbottombar {
	margin:3px;
	padding:3px;
	border:1px solid DarkGray;
	border-radius:3px;
	font-family:inherit;
}

img.block {
	border:none;
	height:20px;
	vertical-align:middle;
}
.line1, .line3 {vertical-align:bottom;} 
.line2, .line4 {vertical-align:middle;}
.line5 {vertical-align:top;}

legend {
	font-weight:bold;
}

/* Indicate that the parent died shortly after the birth */
.parentdeath {
	border:1px solid Black;
}

/* Hyperlinks: regular and help */
a {
	text-decoration:none;
}
a:link, a:visited {
	color:DarkSlateGray;
}
a:hover, a:active {
	color:White !important;
	background-color:DarkSlateGray;
}
a.help {
	font-weight:bold;
	text-shadow:Black 1px 1px 1px;
	color:Yellow !important;
	cursor:help;
}

body {
	color:DimGray;
	background-color:White;
	font:12px sans-serif; /* Use the browser's default font - give control to the user */
	margin:0;
}

img {
	border:0;
}

/* Various text styles */
.warning, .error, .largeError {
	color:red;
	font-weight:bold;
}

/* Fact labels */
.label {
	font-weight:bold;
}

/* Main name on INDI/FAM/etc. pages */
.name_head {
	font-size:150%;
}

/* Elements used on every page */
#header {
	color:#888;
	text-align:center;
}
#topMenu {
	clear:both;
	text-align:center;
	padding-top:1em;
}
#content {
	margin-top:1em;
	margin-bottom:1em;
}
#footer {
	clear:both;
	text-align:center;
	width:99%;
}

/* Block level objects, such as header, footer, etc. */
.block {background-color:#EEE; clear:none;}
.blockheader {font-weight:bold;}
.charts_block {overflow:auto;}

/* Pending edits */
.change_new, .nameblue {
	border:solid blue 2px !important;
}
.change_old, .namered {
	color:#888 !important;
	text-decoration:line-through !important;
}

/* Use CSS menus based on nested <ul> */
.makeMenu li {
	background:none !important;
	display:inline;
	position:relative;
	white-space:nowrap;
}

.makeMenu li:before {
	content:" | ";
}
.makeMenu li ul li:before {
	content:"";
}
.makeMenu li:first-child:before {
	content:"";
}

.makeMenu li ul {
	display:none;
	position:absolute;
	left:0;
	top:1.1em;
	background-color:#EEE;
	border:thin solid #AAA;
	z-index:999;
}

html[dir='rtl'] .makeMenu li ul {
	left:auto;
	right:0;
}

/* position sub-sub-menus */
.makeMenu ul ul {
	top:0;
	left:100px;
}
html[dir='rtl'] .makeMenu ul ul {
	top:0;
	left:auto;
	right:100px;
}

.makeMenu li ul li {
	display:block;
	text-align:left;
}

html[dir='rtl'] .makeMenu li ul li {
	text-align:right;
}

.makeMenu, .makeMenu li ul {
	list-style:none;
	margin:0;
	padding:1px;
}

.makeMenu li:hover > ul {
	display:block;
}

.makeMenu ul li a {
	background-color:#EEE;
	padding:0 5px 0 2px;
	display:block;
}

.makeMenu ul li a:hover  {
    background-color:DarkSlateGray;
	color:#000;
}

#menu-language li {text-align:left;} /* The language menu is always LTR, even on RTL pages */
#menu-theme    li {text-align:left;} /* The theme menu is always LTR, even on RTL pages */

/* person boxes are used in various charts */

.person_box img{background-color:#DDF;}
.person_boxF img{background-color:#FDD;}
.person_boxNN img{background-color:#DFD;}

.person_box {
	background-color:#DDF;
	overflow:visible;
	font: 13px  arial;
}

.person_boxF {
	background-color:#FDD;
	font: 13px  arial;
	overflow:visible;
}

.person_boxNN {
	background-color:#DFD;
	overflow:visible;
	font: 13px  arial;
}

.person_box, .person_boxF, person_boxNN {min-height:45px;}

.action_headerF {background: #FDD;}
.action_header {background: #DDF;}

/* index.php */
#index_main_blocks {
	width:60%;
	float:left;
}
#index_small_blocks {
	width:40%;
	float:right;
}
#index_full_blocks {
}


.facts_table, .facts_table_rtl {
	width:100%;
}

/* pedigree.php */
.pedigree_image_portrait, .pedigree_image_landscape {
	float:left;
	max-height:45px;
	max-width:37px;
	margin-right:3px;
}

.pedigree_image_portrait_rtl, .pedigree_image_landscape_rtl {
	float:right;
	max-height:45px;
	max-width:37px;
	margin-left:3px;
}

/*-- pedigree chart specific stylesheets --*/
#pedigree_chart {
	position:relative;
	top:-230px;
	left:0;
}

.thumbnail {
height:auto;
padding:5px;
}

/*-- pedigree chart rtl specific stylesheets --*/
html[dir='rtl'] #pedigree_chart {
left:auto;
right:10px;
}

/* Printer friendliness */
@media print {
	#header, #footer {
	display:none;
	}
}

/* Tabular data */
.list_table {
	padding:3px;
	margin-left:auto;
	margin-right:auto;
}
.topbottombar {
	font-weight:bold;
	font-size:125%;
	background-color:#BBB;
	text-align:center;
}
/* ... */

